crates/server/src/snapshots/server__hover__tests__method_hover.snap
---
source: crates/server/src/hover.rs
expression: out.unwrap()
---
Hover {
    contents: Markup(
        MarkupContent {
            kind: Markdown,
            value: "",
        },
    ),
    range: Some(
        Range {
            start: Position {
                line: 5,
                character: 25,
            },
            end: Position {
                line: 5,
                character: 31,
            },
        },
    ),
}
